# starlette-google-auth

./: .gitignore  Makefile  pyproject.toml  samconfig.toml  template.yaml
app/: requirements.txt
app/app/: __init__.py  __main__.py  aws_helpers.py  settings.py
app/app/templates/: base.html  index.html
