[project]
name = "starlette-google-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.1",
    "boto3>=1.40.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mangum>=0.19.0",
    "starlette>=0.47.2",
]

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
